[package]

name = "quagmire"
version = "0.0.1"
authors = ["Tom Jakubowski <tom@crystae.net>"]

[dependencies.posix]
git = "https://github.com/mahkoh/posix.rs"

[dependencies.toml]
git = "https://github.com/alexcrichton/toml-rs"

[dependencies.xdg]
git = "https://github.com/tomjakubowski/rust-xdg"
branch = "fix-hashmap-imports"
